@@ -8,6 +8,7 @@ o Added colDevs() as a utility and for use in other multivariate tests.
 o Added data(AddHealth), a simple example of a one-way MANOVA with nice views [thx: Russell Warne]
 o summary.boxM() now returns the calculated statistics and can be used to construct other kinds of plots.
 o plot.boxM() gets a gplabel argument to provide a label for the group factor
+o pairs.mlm() gets a var.cex argument to control size of variable labels
 
 
 Version 1.0-16 (2015-07-11)
